@@ -1,5 +1,8 @@
 Changes with APR-util 1.3.0
 
+  *) Support building DBD drivers as DSOs; use --enable-dbd-dso flag
+     to configure.  [Joe Orton, Bojan Smojver]
+
   *) Rewrite detection of expat in configure to fix build on e.g. biarch
      Linux platforms.  PR 28205.  [Joe Orton]
 
